recursion.logo.koch.Koch.scala.error
Compilation error:
Koch:13: error: not found: value level
  snowSide(level-1,length/3)
           ^Koch:15: error: not found: value level
  snowSide(level-1,length/3)
           ^Koch:17: error: not found: value level
  snowSide(level-1,length/3)
           ^Koch:19: error: not found: value level
  snowSide(level-1,length/3)
           ^